Kubernetes Deployment & CICD Automation/Part-A-Kubernetes Deployment/Kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flask-app
  name: flask-app-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-app
  type: ClusterIP
status:
  loadBalancer: {}
